syntax = "proto3";

package gen.protobuf;

option java_package = "org.gosspy.gen.protobuf";
option java_multiple_files = true;

import "google/protobuf/any.proto";

enum ResponseStatus {
    DUPLICATE = 0;
    ACCEPTED = 1;
    REJECTED = 2;
}

message GossipRequest {
    int64 id = 1;
    int32 count = 2;
    google.protobuf.Any key = 3;
    optional google.protobuf.Any data = 4;
}

message GossipResponse {
    int64 id = 1;
    ResponseStatus status = 2;
    optional google.protobuf.Any data = 3;
}

service RpcGossipHandler {
    rpc GetData(GossipRequest) returns (GossipResponse) {};
    rpc SetData(GossipRequest) returns (GossipResponse) {};
}